--- a/src/components/Neighbourhood/Neighbourhood.css
+++ b/src/components/Neighbourhood/Neighbourhood.css
@@ -15,14 +15,15 @@
 }
 .r-card>img{
     width: 100%;
-    max-width: 15rem;
+    width: 15rem;
+    height: 13rem;
 }
 .r-card>:nth-child(2){
     font-size: 1.2rem;
     font-weight: 600;
 }
 .r-card>:nth-child(3){
-    font-size: 1.5rem;
+    font-size: 1.0rem;
 }
 .r-card>:nth-child(4){
     font-size: 0.7rem;
@@ -65,4 +66,12 @@
 .r-buttons>:nth-child(2)
 {
     box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25);
+}
+@media (max-width: 640px){
+    .r-head{
+        align-items: center;
+    }
+    .r-buttons{
+        position: initial;
+    }
 }
