--- a/src/components/Value/Value.css
+++ b/src/components/Value/Value.css
@@ -44,3 +44,16 @@
     font-size: 1.1rem;
 
 }
+
+@media (max-width: 1024px){
+    .v-container{
+        flex-direction: column;
+    }
+
+    @media (max-width: 768px){
+        .accordionButton .primaryText{
+            font-size: 0.8rem;
+        }
+    }
+
+}
