--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,11 @@
+.f-wrapper{
+    background: var(--black);
+    color: white;
+}
 .f-container{
     justify-content: space-between;
 }
-.f-left{
-    gap: 1rem;
-}
+
 .f-menu{
     gap: 1.5rem;
     margin-top: 1.5rem;
