--- a/src/components/Viewing/Viewing.css
+++ b/src/components/Viewing/Viewing.css
@@ -1,6 +1,6 @@
 .inner-container{
     gap: 1.5rem;
-    background: #4161df;
+    background: #1f3e72;
     padding: 2rem;
     border-radius: 10px;
     border: 6px solid #5d77d6;
@@ -14,6 +14,7 @@
 
 .inner-container .secondaryText{
     color: rgba(255,255,255,0.587);
+    gap: 0.5rem;
 }
 
 .inner-container .button{
