--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -31,8 +31,8 @@
     background: var(--orange-gradient);
     border-radius: 999px;
     position: absolute;
-    right: 47%;
-    top: -10%;
+    right: -2%;
+    top: -25%;
     z-index: -1;
 }
 
@@ -51,22 +51,35 @@
 }
 
 .stats{
-    width: 100%;
+    width: 50%;
     justify-content: space-between;
 }
 
 
 
+
 /*right side*/
 
-.image-container{
-    width: 30rem;
+.image-containerh{
+    width: 45rem;
     height: 35rem;
     overflow: hidden;
-    border-radius: 15rem 15rem 0 0;
+    border-radius: 10rem 10rem 10rem 10rem;
     border: 8px solid rgba(255, 255, 255, 0.12);
 }
 
+.image-containerh>img{
+    width:100%;
+    height: 100%;
+}
+
+.image-container{
+    width: 35rem;
+    height: 40rem;
+    overflow: hidden;
+    border-radius: 20rem 20rem 0 0;
+    border: 8px solid rgba(255, 255, 255, 0.12);
+}
 .image-container>img{
     width:100%;
     height: 100%;
